[gd_scene load_steps=17 format=2]

[ext_resource path="res://resource/backgroud/milky-way.jpg" type="Texture" id=1]
[ext_resource path="res://commander_dead.tscn" type="PackedScene" id=2]
[ext_resource path="res://right_frontier.tscn" type="PackedScene" id=3]
[ext_resource path="res://top_frontier2.tscn" type="PackedScene" id=4]
[ext_resource path="res://world.gd" type="Script" id=5]
[ext_resource path="res://left_frontier.tscn" type="PackedScene" id=6]
[ext_resource path="res://top_frontier.tscn" type="PackedScene" id=7]
[ext_resource path="res://bullet_contact.tscn" type="PackedScene" id=8]
[ext_resource path="res://player_dead.tscn" type="PackedScene" id=9]
[ext_resource path="res://resource/Sounds/warrior_medium-192841.mp3" type="AudioStream" id=10]
[ext_resource path="res://impact.tscn" type="PackedScene" id=11]
[ext_resource path="res://ship_explotion.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI.tscn" type="PackedScene" id=13]
[ext_resource path="res://red_flag.tscn" type="PackedScene" id=14]
[ext_resource path="res://blue_flag.tscn" type="PackedScene" id=15]

[sub_resource type="Theme" id=1]

[node name="world" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 5000.0
margin_bottom = 5000.0
theme = SubResource( 1 )
texture = ExtResource( 1 )

[node name="left_frontier" parent="." instance=ExtResource( 6 )]

[node name="right_frontier" parent="." instance=ExtResource( 3 )]

[node name="top_frontier" parent="." instance=ExtResource( 7 )]

[node name="bottom_frontier" parent="." instance=ExtResource( 4 )]

[node name="bullet_contact" parent="." instance=ExtResource( 8 )]
pitch_scale = 0.72
attenuation = 215.27

[node name="background_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="player_dead" parent="." instance=ExtResource( 9 )]

[node name="ship_explotion" parent="." instance=ExtResource( 12 )]

[node name="commander_dead" parent="." instance=ExtResource( 2 )]

[node name="impact" parent="." instance=ExtResource( 11 )]

[node name="blue_flag" parent="." instance=ExtResource( 15 )]
position = Vector2( 48, 44 )

[node name="red_flag" parent="." instance=ExtResource( 14 )]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.9, 0.8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 13 )]

[connection signal="tree_exited" from="." to="." method="_on_world_tree_exited"]
[connection signal="finished" from="background_sound" to="." method="_on_background_sound_finished"]
[connection signal="captured" from="blue_flag" to="." method="_on_blue_flag_captured"]
[connection signal="captured" from="red_flag" to="." method="_on_red_flag_captured"]
[connection signal="send" from="CanvasLayer/UI" to="." method="_on_UI_send"]
